# Tabular_Review

./: .coderabbit.yaml  .env.example  .gitignore  App.tsx  CLAUDE.md  Design.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.prod.yml  docker-compose.yml  index.html  start-backend.sh  vite-env.d.ts
backend/: .gitignore  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  db.py  logging.py  schemas.py
backend/app/domains/chat/application/: agent.py  service.py
backend/app/domains/chat/domain/: models.py  ports.py
backend/app/domains/chat/infrastructure/: models.py  repositories.py  toolset.py
backend/app/domains/chat/interface/: dependencies.py  router.py  schemas.py
backend/app/domains/document_conversion/application/: service.py
backend/app/domains/document_conversion/domain/: models.py  ports.py
backend/app/domains/document_conversion/infrastructure/: docling_converter.py  huggingface_ssl.py
backend/app/domains/document_conversion/interface/: dependencies.py  router.py  schemas.py
backend/app/domains/document_db/application/: column_template_service.py  service.py
backend/app/domains/document_db/domain/: models.py  ports.py
backend/app/domains/document_db/infrastructure/: models.py  repositories.py
backend/app/domains/document_db/interface/: column_template_router.py  dependencies.py  router.py  schemas.py
backend/app/domains/embedding/domain/: ports.py
backend/app/domains/embedding/infrastructure/: gemini_embedder.py  tei_embedder.py
backend/app/domains/extraction/application/: processor.py  service.py
backend/app/domains/extraction/domain/: models.py  ports.py
backend/app/domains/extraction/infrastructure/: models.py  repositories.py
backend/app/domains/extraction/interface/: dependencies.py  router.py  schemas.py
backend/app/domains/ingestion/application/: processor.py  service.py
backend/app/domains/ingestion/domain/: models.py  ports.py
backend/app/domains/ingestion/infrastructure/: models.py  repositories.py
backend/app/domains/ingestion/interface/: dependencies.py  router.py  schemas.py
backend/app/domains/llm/application/: service.py
backend/app/domains/llm/domain/: models.py  ports.py
backend/app/domains/llm/infrastructure/: gemini_llm.py  vllm_client.py  (+1 more)
backend/migrations/: env.py
backend/migrations/versions/: 20260608_0001_enable_pgvector.py  20260608_1418_document_db_and_document_column.py  20260608_1606_document_and_document_chunk.py  20260608_1748_cell_cell_source_extraction_run.py  20260611_1030_chat_session_message_source.py  20260616_1200_column_template.py  20260616_1300_column_template_options.py
backend/scripts/: download_docling_models.py
backend/tests/chat/: fake_repository.py  test_agent_helpers.py  test_agent_loop.py  test_router.py  test_router_messages.py  test_service.py  test_toolset.py
backend/tests/document_db/: fake_repository.py  test_column_template_router.py  test_column_template_service.py
backend/tests/extraction/: test_processor.py
(+136 files in other folders)
