[project]
name = "tabular-review-backend"
version = "0.1.0"
description = "FastAPI + Docling backend for Tabular Review (DDD, ports & adapters)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    # `fastapi dev` CLI (dev hot-reload server) + uvicorn[standard] reload deps.
    "fastapi-cli",
    "python-multipart",
    "pydantic-settings",
    # Persistence: async SQLAlchemy + asyncpg driver, Alembic migrations, pgvector type.
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "pgvector",
    # Object storage for original uploaded files.
    "minio",
    # Observability: LLM call tracing.
    "langfuse",
    "torch==2.5.1",
    "torchvision==0.20.1",
    # transformers 5.x requires a torch build exposing float8_e8m0fnu (torch >= 2.7),
    # which the torch 2.5.1 pin does not provide. Keep transformers on 4.x.
    "transformers<5",
    "docling",
    "httpx",
    "requests",
    "langchain>=1.3,<2",
    "langchain-openai>=1.1,<2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
# This is an application, not a library — don't build/install the root package.
package = false

# Pull torch/torchvision CPU wheels on Linux (the Docker target) to avoid the
# multi-GB CUDA stack. On macOS, resolve from the default index so the MPS-capable
# wheels are used (start-backend.sh enables MPS on Apple Silicon).
[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
